Add social links and RSS feed

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -60,6 +60,7 @@
           <li><a aria-current="{% if page.url == '/events/' %}page{% else %}false{% endif %}" href="/events/">Events</a></li>
           <li><a aria-current="{% if page.url == '/call-for-papers/' %}page{% else %}false{% endif %}" href="/call-for-papers/">CFP</a></li>
           <li><a aria-current="{% if page.url == '/codeofconduct/' %}page{% else %}false{% endif %}" href="/codeofconduct/">Code of Conduct</a></li>
+          <li><a href="/feed.xml">RSS</a></li>
         </ul>
       </nav>
     </header>
@@ -72,38 +73,35 @@
       <div class="u-container">
         <p class="h1">PerformanceObserver</p>
         <div class="u-flex">
-          <div>
-            <ul role="list">
-              <li><a href="/">Home</a></li>
-              <li><a href="/events/">Events</a></li>
-              <li><a href="/codeofconduct/">Code of Conduct</a></li>
-              <li>
-                <a href="https://www.youtube.com/@PerformanceObserver" rel="nofollow">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"  width="20" height="20" aria-hidden="true"><path fill="currentColor" d="M549.7 124.1c-6.3-23.7-24.8-42.3-48.3-48.6C458.8 64 288 64 288 64S117.2 64 74.6 75.5c-23.5 6.3-42 24.9-48.3 48.6-11.4 42.9-11.4 132.3-11.4 132.3s0 89.4 11.4 132.3c6.3 23.7 24.8 41.5 48.3 47.8C117.2 448 288 448 288 448s170.8 0 213.4-11.5c23.5-6.3 42-24.2 48.3-47.8 11.4-42.9 11.4-132.3 11.4-132.3s0-89.4-11.4-132.3zm-317.5 213.5V175.2l142.7 81.2-142.7 81.2z"/></svg>
-                  YouTube
-                </a>
-              </li>
-              <li>
-                <a href="https://bsky.app/profile/performanceobserver.dev" rel="nofollow">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" width="20" height="20" aria-hidden="true"><path fill="currentColor" d="M407.8 294.7c-3.3-.4-6.7-.8-10-1.3c3.4 .4 6.7 .9 10 1.3zM288 227.1C261.9 176.4 190.9 81.9 124.9 35.3C61.6-9.4 37.5-1.7 21.6 5.5C3.3 13.8 0 41.9 0 58.4S9.1 194 15 213.9c19.5 65.7 89.1 87.9 153.2 80.7c3.3-.5 6.6-.9 10-1.4c-3.3 .5-6.6 1-10 1.4C74.3 308.6-9.1 342.8 100.3 464.5C220.6 589.1 265.1 437.8 288 361.1c22.9 76.7 49.2 222.5 185.6 103.4c102.4-103.4 28.1-156-65.8-169.9c-3.3-.4-6.7-.8-10-1.3c3.4 .4 6.7 .9 10 1.3c64.1 7.1 133.6-15.1 153.2-80.7C566.9 194 576 75 576 58.4s-3.3-44.7-21.6-52.9c-15.8-7.1-40-14.9-103.2 29.8C385.1 81.9 314.1 176.4 288 227.1z"/></svg>
-                  Bluesky
-                </a>
-              </li>
-              <li>
-                <a href="https://web.brid.gy/r/https://performanceobserver.dev" rel="me nofollow">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="20" height="20" aria-hidden="true" ><path fill="currentColor" d="M433 179.11c0-97.2-63.71-125.7-63.71-125.7-62.52-28.7-228.56-28.4-290.48 0 0 0-63.72 28.5-63.72 125.7 0 115.7-6.6 259.4 105.63 289.1 40.51 10.7 75.32 13 103.33 11.4 50.81-2.8 79.32-18.1 79.32-18.1l-1.7-36.9s-36.31 11.4-77.12 10.1c-40.41-1.4-83-4.4-89.63-54a102.54 102.54 0 0 1-.9-13.9c85.63 20.9 158.65 9.1 178.75 6.7 56.12-6.7 105-41.3 111.23-72.9 9.8-49.8 9-121.5 9-121.5zm-75.12 125.2h-46.63v-114.2c0-49.7-64-51.6-64 6.9v62.5h-46.33V197c0-58.5-64-56.6-64-6.9v114.2H90.19c0-122.1-5.2-147.9 18.41-175 25.9-28.9 79.82-30.8 103.83 6.1l11.6 19.5 11.6-19.5c24.11-37.1 78.12-34.8 103.83-6.1 23.71 27.3 18.4 53 18.4 175z"/></svg>
-                  Mastodon
-                </a>
-              </li>
-              <li>
-                <a href="https://web.brid.gy/performanceobserver.dev" rel="me nofollow">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="20" height="20" aria-hidden="true" ><path fill="currentColor" d="M433 179.11c0-97.2-63.71-125.7-63.71-125.7-62.52-28.7-228.56-28.4-290.48 0 0 0-63.72 28.5-63.72 125.7 0 115.7-6.6 259.4 105.63 289.1 40.51 10.7 75.32 13 103.33 11.4 50.81-2.8 79.32-18.1 79.32-18.1l-1.7-36.9s-36.31 11.4-77.12 10.1c-40.41-1.4-83-4.4-89.63-54a102.54 102.54 0 0 1-.9-13.9c85.63 20.9 158.65 9.1 178.75 6.7 56.12-6.7 105-41.3 111.23-72.9 9.8-49.8 9-121.5 9-121.5zm-75.12 125.2h-46.63v-114.2c0-49.7-64-51.6-64 6.9v62.5h-46.33V197c0-58.5-64-56.6-64-6.9v114.2H90.19c0-122.1-5.2-147.9 18.41-175 25.9-28.9 79.82-30.8 103.83 6.1l11.6 19.5 11.6-19.5c24.11-37.1 78.12-34.8 103.83-6.1 23.71 27.3 18.4 53 18.4 175z"/></svg>
-                  Mastodon
-                </a>
-              </li>
-              <li>Contact: <a href="mailto:info@performanceobserver.dev">info@performanceobserver.dev</a></li>
-            </ul>
-          </div>
+
+        </div>
+        <div class="u-flex">
+          <ul role="list">
+            <li><a href="/">Home</a></li>
+            <li><a href="/events/">Events</a></li>
+            <li><a href="/codeofconduct/">Code of Conduct</a></li>
+            <li>Contact: <a href="mailto:info@performanceobserver.dev">info@performanceobserver.dev</a></li>
+          </ul>
+          <ul role="list">
+            <li>
+              <a href="https://www.youtube.com/@PerformanceObserver" rel="nofollow">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"  width="20" height="20" aria-hidden="true"><path fill="currentColor" d="M549.7 124.1c-6.3-23.7-24.8-42.3-48.3-48.6C458.8 64 288 64 288 64S117.2 64 74.6 75.5c-23.5 6.3-42 24.9-48.3 48.6-11.4 42.9-11.4 132.3-11.4 132.3s0 89.4 11.4 132.3c6.3 23.7 24.8 41.5 48.3 47.8C117.2 448 288 448 288 448s170.8 0 213.4-11.5c23.5-6.3 42-24.2 48.3-47.8 11.4-42.9 11.4-132.3 11.4-132.3s0-89.4-11.4-132.3zm-317.5 213.5V175.2l142.7 81.2-142.7 81.2z"/></svg>
+                YouTube
+              </a>
+            </li>
+            <li>
+              <a href="https://bsky.app/profile/performanceobserver.dev" rel="nofollow">
+                <img src="/images/bluesky-light.svg" loading="lazy" alt="" height="20" width="20">
+                Bluesky
+              </a>
+            </li>
+            <li>
+              <a href="https://front-end.social/@performanceobserver.dev@bsky.brid.gy" rel="me nofollow">
+                <img src="/images/mastodon-light.svg" loading="lazy" alt="" height="20" width="20">
+                Mastodon
+              </a>
+            </li>
+          </ul>
           <form
             action="https://buttondown.com/api/emails/embed-subscribe/performanceobserver"
             method="post"
