Attempt to escape html content for rss

--- a/src/rss.njk
+++ b/src/rss.njk
@@ -35,10 +35,13 @@ metadata:
     <updated>{{ event.published_at | toDate | dateToRfc3339 }}</updated>
     <id>{{ metadata.base }}events/{{ event.slug }}/</id>
     <content type="html">
-      <h1>{{ event.content.title }}</h1>
-      <p>{{ event.content.overview }}</p>
-      <p class="date"><time datetime="{{ event.startTimeUTC }}">{{ event.startTimeUTC | readableDateTime }}</time></p>
-      <p><a href="{{ metadata.base }}events/{{ event.slug }}/">Full details and calendar links...</a></p>
+      {% set content %}
+        <h1>{{ event.content.title }}</h1>
+        <p>{{ event.content.overview }}</p>
+        <p class="date"><time datetime="{{ event.startTimeUTC }}">{{ event.startTimeUTC | readableDateTime }}</time></p>
+        <p><a href="{{ metadata.base }}events/{{ event.slug }}/">Full details and calendar links...</a></p>
+      {% endset %}
+      {{ content }}
     </content>
   </entry>
   {%- endfor %}
