--- a/src/rss.njk
+++ b/src/rss.njk
@@ -41,7 +41,7 @@ metadata:
         <p class="date"><time datetime="{{ event.startTimeUTC }}">{{ event.startTimeUTC | readableDateTime }}</time></p>
         <p><a href="{{ metadata.base }}events/{{ event.slug }}/">Full details and calendar links...</a></p>
       {% endset %}
-      {{ content }}
+      {{ content | escapeXml }}
     </content>
   </entry>
   {%- endfor %}
