Prepend 'PerformanceObserver' to calendar event titles

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -80,6 +80,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/events/">Events</a></li>
             <li><a href="/codeofconduct/">Code of Conduct</a></li>
+            <li><a href="/feed.xml">RSS</a></li>
             <li>Contact: <a href="mailto:info@performanceobserver.dev">info@performanceobserver.dev</a></li>
           </ul>
           <ul role="list">
