--- a/src/_includes/upcomingEvent.njk
+++ b/src/_includes/upcomingEvent.njk
@@ -19,15 +19,15 @@
     {% set calJoinLink = event.content.join_link | encodeForUrl %}
     <p>Add to Calendar:</p>
     <div class="calendar-links">
-      <a href="https://calndr.link/d/event/?service=google&start={{ calStartTime }}&title={{ calTitle }}&timezone=America%2FNew_York&location={{ calJoinLink }}&description={{ calDescription }}" rel="nofollow" class="button" target="_blank">
+      <a href="https://calndr.link/d/event/?service=google&start={{ calStartTime }}&title=PerformanceObserver {{ calTitle }}&timezone=America%2FNew_York&location={{ calJoinLink }}&description={{ calDescription }}" rel="nofollow" class="button" target="_blank">
         <img src="/images/calendar_add.svg" alt="calendar" height="16" width="16">
         Google
       </a>
-      <a href="https://calndr.link/d/event/?service=apple&start={{ calStartTime }}&title={{ calTitle }}&timezone=America%2FNew_York&location={{ calJoinLink }}&description={{ calDescription }}" rel="nofollow" class="button" target="_blank">
+      <a href="https://calndr.link/d/event/?service=apple&start={{ calStartTime }}&title=PerformanceObserver {{ calTitle }}&timezone=America%2FNew_York&location={{ calJoinLink }}&description={{ calDescription }}" rel="nofollow" class="button" target="_blank">
         <img src="/images/calendar_add.svg" alt="calendar" height="16" width="16">
         Apple
       </a>
-      <a href="https://calndr.link/d/event/?service=outlookcom&start={{ calStartTime }}&title={{ calTitle }}&timezone=America%2FNew_York&location={{ calJoinLink }}&description={{ calDescription }}" rel="nofollow" class="button" target="_blank">
+      <a href="https://calndr.link/d/event/?service=outlookcom&start={{ calStartTime }}&title=PerformanceObserver {{ calTitle }}&timezone=America%2FNew_York&location={{ calJoinLink }}&description={{ calDescription }}" rel="nofollow" class="button" target="_blank">
         <img src="/images/calendar_add.svg" alt="calendar" height="16" width="16">
         Outlook
       </a>
