--- a/src/_includes/upcomingEvent.njk
+++ b/src/_includes/upcomingEvent.njk
@@ -41,7 +41,7 @@
           {% if starting_h_level == 'h3' %}
             <h4>{{ talk.content.title }}</h4>
           {% elif starting_h_level == 'h1' %}
-            <h2 class="h3">{{ talk.content.title }}</h2>
+            <h2 class="h3"><a href="/talks/{{ talk.slug }}">{{ talk.content.title }}</a></h2>
           {% else %}
             <h3>{{ talk.content.title }}</h3>
           {% endif %}
